force-app/main/default/objects/Transaction_Fee__c/Transaction_Fee__c.object-meta.xml
<CustomObject>
    <label>Transaction Fee</label>
    <nameField>
        <label>Transaction Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>