force-app/main/default/objects/Transaction_Fee__c/fields/Amount_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Amount_Written_Off__c</fullName>
    <label>Amount Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>