force-app/main/default/objects/Transaction_Fee__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Transaction Fees</relationshipLabel>
    <relationshipName>Transaction_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>