force-app/main/default/objects/Transaction_Fee__c/fields/Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fully_Paid__c</fullName>
    <formula>Amount__c  =  Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Paid</label>
    <type>Checkbox</type>
</CustomField>