force-app/main/default/objects/Transaction_Fee__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Transaction Fees</relationshipLabel>
    <relationshipName>Transaction_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>