force-app/main/default/objects/Transaction_Fee__c/fields/Transaction_Line__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Line</label>
    <referenceTo>Transaction_Line__c</referenceTo>
    <relationshipLabel>Transaction Fees</relationshipLabel>
    <relationshipName>Transaction_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>